fix toast vertical alignment issues

--- a/app/assets/stylesheets/material_overrides.scss
+++ b/app/assets/stylesheets/material_overrides.scss
@@ -9,3 +9,7 @@
 .content__title .actions {
   top: 0.5rem;
 }
+
+.alert .close {
+  line-height: 0.8rem;
+}
